--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
-<body>
+<body class="mobile">
+	
+	
 	<header onclick="closeMap()">
 		<!--////////////..barra de navegacion..//////////-->
 		<div class="navbar fixed-top">
